--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NP7HD99');</script>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KD5FJG69F4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KD5FJG69F4');
+</script>
 <body class="bg-light">
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP7HD99"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
